--- a/lopez.styles.css
+++ b/lopez.styles.css
@@ -2,6 +2,134 @@
 /* CSS by Caleb Lopez */
 
 /* --------------- ADD CSS RESET TO THE FILE HERE --------------- */
+/* http://meyerweb.com/eric/tools/css/reset/
+v2.0 | 20110126
+License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
 
 /* ----- AUTOPREFIXER FOR VS CODE WAS USED FOR VENDOR PREFIXES ----- */
 /* ---------- VARIABLES ---------- */
@@ -165,8 +293,7 @@ img {
 }
 
 /* ---------- SMALL SCREEN STYLES ---------- */
-/* --------------- BEGIN SMALL SCREEN SIZES --------------- */
-@media (max-width: 480px) {
+@media screen and (min-width: 600px) {
   header,
   footer {
     background-color: var(--lime-green);
@@ -198,174 +325,170 @@ img {
     max-width: 200px;
   }
 }
-/* header, footer{
-        background-color: var(--lime-green);
-        color: var(--dark-gray);
-    }
-
-    main{
-        display: grid;
-        grid-gap: 0.75em;
-        grid-template-columns: 1fr 1fr;
-        margin: 1em 0;
-    }
-
-    section{
-        background-color: var(--yellow);
-        color: var(--dark-gray);
-        margin: 0;
-    }
-
-    #one, #two, #seven, #eight{
-        grid-column: 1/3;
-    }
-
-    img{
-        width: 200px;
-        max-width: 200px;
-    } */
 /* --------------- END SMALL SCREEN SIZES --------------- */
 
 /* ---------- MEDIUM SCREEN STYLES ---------- */
 /* --------------- BEGIN MEDIUM SCREEN SIZES --------------- */
-/* header, footer{
-        background-color: var(--black);
-        color: var(--white);
-    }   
+@media screen and (min-width: 1000px) {
+  header,
+  footer {
+    background-color: var(--black);
+    color: var(--white);
+  }
 
-    main{
-        grid-template-columns: 1fr 1fr 1fr;
-    }
+  main {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 
-    section{
-        background-color: var(--light-gray);
-    }
+  section {
+    background-color: var(--light-gray);
+  }
 
-    #one{
-        grid-column: 1/3;
-    }
+  #one {
+    grid-column: 1/3;
+  }
 
-    #two{
-        grid-column: 3/4;
-        grid-row: 1/3;
-    }
+  #two {
+    grid-column: 3/4;
+    grid-row: 1/3;
+  }
 
-    #seven{
-        grid-column: 3/4;
-        grid-row: 3/5;
-    } */
+  #seven {
+    grid-column: 3/4;
+    grid-row: 3/5;
+  }
+}
 /* --------------- END MEDIUM SCREEN SIZES --------------- */
 
 /* ---------- LARGE SCREEN STYLES ---------- */
 /* --------------- BEGIN LARGE SCREEN SIZES --------------- */
-/* header, footer{
-        background-color: var(--lime-green);
-        color: var(--dark-gray);
-    }
+@media screen and (min-width: 1250px) {
+  header,
+  footer {
+    background-color: var(--lime-green);
+    color: var(--dark-gray);
+  }
 
-    h1, h2{
-        display: inline-block;
-    }
+  h1,
+  h2 {
+    display: inline-block;
+  }
 
-    section{
-        background-color: var(--blue);
-    }
+  section {
+    background-color: var(--blue);
+  }
 
-    main{
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
+  main {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
 
-    #one, #seven{
-        grid-column: 1/3;
-    }
+  #one,
+  #seven {
+    grid-column: 1/3;
+  }
 
-    #two{
-        grid-row: 1/2;
-    }
+  #two {
+    grid-row: 1/2;
+  }
 
-    #two, #eight{
-        grid-column: 3/5;
-    }
+  #two,
+  #eight {
+    grid-column: 3/5;
+  }
 
-    #seven, #eight{
-        grid-row: 3/4;
-    } */
+  #seven,
+  #eight {
+    grid-row: 3/4;
+  }
+}
 /* --------------- END LARGE SCREEN SIZES --------------- */
 
 /* ---------- ADJUSTING RESPONSIVE IMAGE SIZE ---------- */
 /* --------------- BEGIN RESPONSIVE IMAGE ADJUST SIZES --------------- */
-/* img{
-        width: 300px;
-        max-width: 300px;
-    } */
+@media screen and (min-width: 1320px) {
+  img {
+    width: 300px;
+    max-width: 300px;
+  }
+}
 /* --------------- END RESPONSIVE IMAGE ADJUST SIZES --------------- */
 
 /* ---------- EXTRA LARGE SCREEN STYLES ---------- */
 /* --------------- BEGIN EXTRA LARGE SCREEN SIZES --------------- */
-/* header, footer{
-        background-color: var(--orange);
-        padding-left: 5%;
-    }
+@media screen and (min-width: 1600px) {
+  header,
+  footer {
+    background-color: var(--orange);
+    padding-left: 5%;
+  }
 
-    main{
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-        margin: 1em auto;
-    }
+  main {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    margin: 1em auto;
+  }
 
-    section{
-        background-color: var(--blue-gray);
-        color: var(--dark-gray);
-    }
+  section {
+    background-color: var(--blue-gray);
+    color: var(--dark-gray);
+  }
 
-    #one, #two{
-        grid-row: 1/3;
-    }
+  #one,
+  #two {
+    grid-row: 1/3;
+  }
 
-    #one{
-        grid-column: 1/5;
-    }
+  #one {
+    grid-column: 1/5;
+  }
 
-    #two{
-        grid-column: 5/9;
-    }
+  #two {
+    grid-column: 5/9;
+  }
 
-    #three, #four{
-        grid-column: 9/12;
-    }
+  #three,
+  #four {
+    grid-column: 9/12;
+  }
 
-    #three{
-        grid-row: 1/2;
-    }
+  #three {
+    grid-row: 1/2;
+  }
 
-    #four{
-        grid-row: 2/3;
-    }
+  #four {
+    grid-row: 2/3;
+  }
 
-    #five, #six{
-        grid-column: 1/4;
-    }
+  #five,
+  #six {
+    grid-column: 1/4;
+  }
 
-    #five{
-        grid-row: 3/4;
-    }
+  #five {
+    grid-row: 3/4;
+  }
 
-    #six{
-        grid-row: 4/5;
-    }
+  #six {
+    grid-row: 4/5;
+  }
 
-    #seven, #eight{
-        grid-row: 3/5;
-    }
+  #seven,
+  #eight {
+    grid-row: 3/5;
+  }
 
-    #seven{
-        grid-column: 4/8;
-    }
+  #seven {
+    grid-column: 4/8;
+  }
 
-    #eight{
-        grid-column: 8/12;
-    }
+  #eight {
+    grid-column: 8/12;
+  }
 
-    #three p, #four p, #five p, #six p{
-        padding-top: 2em;
-    } */
+  #three p,
+  #four p,
+  #five p,
+  #six p {
+    padding-top: 2em;
+  }
+}
 /* --------------- END EXTRA LARGE SCREEN SIZES --------------- */
